[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Suelo/main_lev_build.png" type="Texture" id=1]
[ext_resource path="res://Assets/Personajes/NPC'S/PANADERO/bearded-walk-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Personajes/NPC'S/PANADERO/bearded-walk-2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Cat-3/Cat-3-Sitting.png" type="Texture" id=4]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=5]
[ext_resource path="res://KinematicBody2D2.gd" type="Script" id=6]
[ext_resource path="res://Assets/buttons/PixelButtonPrompt.png" type="Texture" id=7]
[ext_resource path="res://Assets/buttons/pixil-layer-3.png" type="Texture" id=8]
[ext_resource path="res://KinematicBody2D3.gd" type="Script" id=9]
[ext_resource path="res://Assets/buttons/hunger.png" type="Texture" id=10]
[ext_resource path="res://Assets/Personajes/NPC'S/PANADERO/bearded-walk-6.png" type="Texture" id=11]
[ext_resource path="res://KinematicBody2D4.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 19.6469

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 141, 0, 141, 109, 0, 109 )

[sub_resource type="TileSet" id=12]
0/name = "main_lev_build.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1156, 89, 141, 109 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 13 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=16]
radius = 20.0998

[sub_resource type="CircleShape2D" id=17]
radius = 16.0

[node name="coliisiontest" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 272, 77 )
frames = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
position = Vector2( 420, 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( -146, 59 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
visible = false
position = Vector2( 285, 59 )
frames = SubResource( 15 )

[node name="Perro" type="KinematicBody2D" parent="."]
position = Vector2( 91, 82 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perro"]
position = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Perro"]
position = Vector2( 1, 2 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="Perro"]
position = Vector2( 4, 2 )
current = true

[node name="TextureProgress" type="TextureProgress" parent="Perro/Camera2D"]
margin_left = 75.0
margin_top = -108.0
margin_right = 137.0
margin_bottom = -76.0
value = 100.0
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[node name="TextureProgress2" type="TextureProgress" parent="Perro/Camera2D"]
margin_left = 129.0
margin_top = -110.0
margin_right = 194.0
margin_bottom = -79.0
value = 100.0
texture_progress = ExtResource( 10 )
nine_patch_stretch = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 19, 131 )
tile_set = SubResource( 12 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, 0, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 9, 0, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="KinematicBody2D2" type="KinematicBody2D" parent="."]
position = Vector2( 165, 76 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D2"]
position = Vector2( -2, -3 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D2/Area2D"]
shape = SubResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D2"]

[node name="KinematicBody2D3" type="KinematicBody2D" parent="."]
position = Vector2( 17, 76 )
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D3"]
texture = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D3/Area2D"]
shape = SubResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D3"]

[connection signal="body_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="KinematicBody2D2/Area2D" to="KinematicBody2D2" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="KinematicBody2D2/Area2D" to="KinematicBody2D2" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="KinematicBody2D3/Area2D" to="KinematicBody2D3" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="KinematicBody2D3/Area2D" to="KinematicBody2D3" method="_on_Area2D_body_exited"]
